# simple_libc

./: .cirrus.yml  .gitignore  .travis.yml  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: constants.rs  epoll.rs  error.rs  exec.rs  externs.rs  fcntl.rs  files.rs  flock.rs  grp.rs  inotify.rs  internal.rs  ioctl.rs  ioprio.rs  kqueue.rs  lib.rs  lockf.rs  namespace.rs  net.rs  openat2.rs  poll.rs  power.rs  prctl.rs  priority.rs  process.rs  pwd.rs  resource.rs  rusage.rs  sched.rs  select.rs  sigaction.rs  sigmask.rs  signal.rs  signalfd.rs  time.rs  types.rs  wait.rs  xattr.rs
src/net/: abstract_unix.rs  mod.rs  sockcred.rs  ucred.rs  xucred.rs
src/pollers/: epoll.rs  kqueue.rs  mod.rs  poll.rs  select.rs
src/process/: exec.rs  mod.rs  namespace.rs  prctl.rs  priority.rs  resource.rs  sigaction.rs  sigmask.rs  signalfd.rs  wait.rs
tests/: test_fork_wait.rs  test_signals.rs
