[package]
name = "simple_libc"
version = "0.4.0"
edition = "2018"

description = "Safe, friendly interfaces to some commonly used Unix libc functions."
authors = ["cptpcrd"]
license = "MIT"
categories = ["api-bindings", "os::unix-apis"]
repository = "https://github.com/cptpcrd/simple_libc"

[features]
default = ["serde"]

[dependencies]
libc = { version = "0.2", features = ["extra_traits"] }
bitflags = "1.2"
strum = "0.18"
strum_macros = "0.18"
lazy_static = "1.4"
cfg-if = "0.1"

serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
serde_test = "1.0"
getrandom = { version = "0.1", features = [] }
