[package]
name = "simple_libc"
version = "0.5.0"
edition = "2018"

description = "Safe, friendly interfaces to some commonly used Unix libc functions."
authors = ["cptpcrd"]
license = "MIT"
categories = ["api-bindings", "os::unix-apis"]
repository = "https://github.com/cptpcrd/simple_libc"

[features]
default = ["serde_full"]

strum_full = ["strum", "strum_macros"]

# Some serializers/deserializers require strum to work properly.
serde_full = ["serde", "strum_full"]

[dependencies]
libc = { version = "0.2", features = ["extra_traits"] }
bitflags = "1.2"

strum = { version = "0.18", optional = true }
strum_macros = { version = "0.18", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
serde_test = "1.0"
getrandom = "0.1"
tempfile = "3.1"
strum = "0.18"
strum_macros = "0.18"
